--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="#">Refeições</a></li>
                 <li><a href="#">Sobremesas</a></li>
-                <li><a href="#">Watzap</a></li>
+                <li><a href="https://wa.me/5521966038318"><abbr title="Péça pelo Watzap">Watzap</abbr></a></li>
             </ul>
         </nav>
         <header>
