--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav>
             <ul>
-                <li><a href="#">Refeições</a></li>
+                <li><a href="refeicoes.html">Refeições</a></li>
                 <li><a href="#">Sobremesas</a></li>
                 <li><a href="https://wa.me/5521966038318"><abbr title="Péça pelo Watzap">Watzap</abbr></a></li>
             </ul>
