corrigiu construção e pt-br

--- a/refeicoes.html
+++ b/refeicoes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="imagens/background-temperos350.jpg" alt="">
-        <h1>Página em contrução</h1>
+        <h1>Página em construção</h1>
         <p>Em breve encontre aqui o cardapio</p>
     </header>
     <footer>
