pagina de diversos rasquinho

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="refeicoes.html">Refeições</a></li>
-                <li><a href="#">Sobremesas</a></li>
+                <li><a href="diversos.html">Diversos</a></li>
                 <li><a href="https://wa.me/5521966038318"><abbr title="Péça pelo Watzap">Watzap</abbr></a></li>
             </ul>
         </nav>
